# ZeitmessanlageV2

./: UsedLoRaIDs.md
.github/workflows/: build-esp32.yml  build-measure-station.yml  test.yml
components/dd-ota/: .gitignore  CMakeLists.txt  Kconfig.projbuild
components/dd-ota/include/: OTA.h
components/dd-ota/src/: OTA.c
components/lora-network/: .gitignore  CMakeLists.txt  Kconfig.projbuild
dogdog-controller/: .gitignore  CMakeLists.txt  sdkconfig.defaults
dogdog-controller-xlr/: CMakeLists.txt  sdkconfig.defaults
dogdog-controller/main/: Button.c  Button.h  ButtonInput.c  ButtonInput.h  Buzzer.c  CMakeLists.txt  Clock.c  Clock.h  GPIOPins.h  Kconfig.projbuild  KeyValue.h  LoraNetwork.c  LoraNetwork.h  Network.c  NetworkFault.c  SevenSegment.c  SevenSegment.h  Timer.c  Timer.h  hand.c  idf_component.yml  main.c  monospace.c  ra01s.c  ra01s.h
measure-stations/: .gitignore  CMakeLists.txt
measure-stations-lora/: CMakeLists.txt  sdkconfig.defaults
measure-stations-lora/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
measure-stations/main/: CMakeLists.txt  Network.c  Network.h  Sensor.c  Timer.c  Timer.h  main.c
remote/: .gitignore  CMakeLists.txt  sdkconfig.defaults
remote-pc/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.defaults
timepanel/: .gitignore  CMakeLists.txt  sdkconfig.defaults
timepanel-clock-lcd/: CMakeLists.txt  sdkconfig.defaults
timepanel-lcd/: .gitignore  CMakeLists.txt
timepanel-lcd/components/Adafruit_ST7735/: CMakeLists.txt
turnier/: .gitignore  docker-compose-postgres.yaml  docker-compose.yml
(+207 files in other folders)
